@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.565 2006/01/06 16:39:49 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.566 2006/01/06 16:46:16 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -10,6 +10,8 @@
   move parse_vdb_contents() to GLIPortage
   src/GLIPortage.py:
   remove all symlink fixups
+  ignore 'dir' entries in CONTENTS
+  call tar with -p
 
   5 Jan 2006; Preston Cody <codeman@gentoo.org>
   AT: bootsplash is now gensplash
